Fixed ul/li font size on iPhone

--- a/sass/body-2.sass
+++ b/sass/body-2.sass
@@ -291,6 +291,8 @@
 					@extend .box
 					margin: 0 0 0 20px
 					padding: 0 60px 0 0
+					font-size: 14px
+					font-weight: 200
 
 p.left
 	text-align: left !important
